--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,27 +2,18 @@
 <h1 class="postTitle"><%= @post.title %></h1>
 <p class="postBody"><%= @post.description %></p>
 
-
-<div id="postResult">
-  <h2 id="postTitle"></h2>
-  <p id="postBody"></p>
-</div>
-
 <script type="text/javascript" charset="utf-8">
-  $(function () {
-    $('form').submit(function(event) {
-      //prevent form from submitting the default way
-      event.preventDefault();
-
-      var values = $(this).serialize();
-
-      var posting = $.post('/posts', values);
-
-      posting.done(function(data) {
-        var post = data;
-        $("#postTitle").text(post["title"]);
-        $("#postBody").text(post["description"]);
-      });
+$(function () {
+  $(".js-next").on("click", function() {
+    var nextId = parseInt($(".js-next").attr("data-id")) + 1;
+    $.get("/posts/" + nextId + ".json", function(data) {
+      // get post
+      var post = data;
+      $(".postTitle").text(post["title"]);
+      $(".postBody").text(post["description"]);
+      // re-set the id to current on the link
+      $(".js-next").attr("data-id", post["id"]);
     });
   });
+});
 </script>
